Add: the connect with me section

--- a/index.html
+++ b/index.html
@@ -145,12 +145,8 @@
           Building scalable cloud systems and clean digital experiences.
           </p>
         </div>
-        <a
-          href="https://github.com/CommunityPro/portfolio-html"
-          class="btn btn-secondary"
-          target="_blank"
-          >Connect With Me</a
-        >
+        <!-- Connect With Me Button -->
+        <a href="connect.html" class="btn btn-secondary">Connect With Me</a>
       </section>
     </header>
 
