Added the projects

--- a/index.html
+++ b/index.html
@@ -160,99 +160,93 @@
 
       <article class="project">
         <!-- Project 1 -->
-        <div href="" class="card">
+        <a href="projects/aws-cost-optimizer.html" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project One</h3>
-              <p>React, Redux, SASS</p>
+              <h3>AWS Cost Optimization Dashboard</h3>
+              <p>AWS Cost Explorer</p>
             </div>
-
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <i class="fab fa-github"></i>
+              <i class="fas fa-external-link-alt"></i>
             </div>
           </div>
-        </div>
+        </a>
 
         <!-- Project 2 -->
-        <div href="" class="card">
+        <a href="projects/agrowfarm-kubernetes.html" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Two</h3>
-              <p>React, Redux, SASS</p>
+              <h3>AgrowFarm on Kubernetes</h3>
+              <p>Kubernetes, Docker, Prometheus, Ingress, StatefulSets</p>
             </div>
-
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <i class="fab fa-github"></i>
+              <i class="fas fa-external-link-alt"></i>
             </div>
           </div>
-        </div>
+        </a>
 
-        <!-- Porject 3 -->
-        <div href="" class="card">
+        <!-- Project 3 -->
+        <a href="projects/terraform-aws-blueprints.html" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Three</h3>
-              <p>React, Redux, SASS</p>
+              <h3>Terraform AWS Blueprints</h3>
+              <p>Terraform, AWS, GitHub Actions</p>
             </div>
-
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <i class="fab fa-github"></i>
+              <i class="fas fa-book"></i>
             </div>
           </div>
-        </div>
+        </a>
 
         <!-- Project 4 -->
-        <div href="" class="card">
+        <a href="projects/ci-cd-automation.html" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Four</h3>
-              <p>React, Redux, SASS</p>
+              <h3>CI/CD Automation Pipeline</h3>
+              <p>GitHub Actions, Docker, AWS CodeDeploy</p>
             </div>
-
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <i class="fab fa-github"></i>
+              <i class="fas fa-play-circle"></i>
             </div>
           </div>
-        </div>
+        </a>
 
         <!-- Project 5 -->
-        <div href="" class="card">
+        <a href="projects/cloud-migration-case.html" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Five</h3>
-              <p>React, Redux, SASS</p>
+              <h3>Enterprise Cloud Migration</h3>
+              <p>AWS, Docker, Jenkins, PostgreSQL</p>
             </div>
-
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <i class="fas fa-lock"></i>
+              <span class="project-badge">Case Study</span>
             </div>
           </div>
-        </div>
+        </a>
 
         <!-- Project 6 -->
-        <div href="" class="card">
+        <a href="projects/devops-learning-platform.html" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Six</h3>
-              <p>React, Redux, SASS</p>
+              <h3>DevOps Learning Platform</h3>
+              <p>Docker, Kubernetes, Markdown, AWS</p>
             </div>
-
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <i class="fab fa-github"></i>
+              <i class="fas fa-globe"></i>
             </div>
           </div>
-        </div>
+        </a>
       </article>
 
-      <a href="#" class="btn btn-secondary"
-        target="_blank" >See More <i class="fas fa-arrow-right"></i
-      ></a>
+      <a href="https://github.com/prashansajoshi?tab=repositories" class="btn btn-secondary" target="_blank">
+        View All Projects <i class="fas fa-arrow-right"></i>
+      </a>
     </section>
 
     <footer id="footer">
@@ -279,7 +273,7 @@
             />
           </a>
         </div>
-        <p>Copyright &copy; Communitypro <span id="datee"></span>, All rights reserved</p>
+        <p>Copyright &copy; Prashansa Joshi <span id="datee"></span>, All rights reserved</p>
       </div>
     </footer>
     <script src="js/script.js"></script>
