Enhance project pages with theme support and improved styling

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <ul class="nav-menu">
             <li><a class="nav-link" href="index.html">HOME</a></li>
             <li><a class="nav-link" href="#projects">PROJECTS</a></li>
-            <li><a class="nav-link" href="index.html#footer">CONTACT</a></li>
+            <li><a class="nav-link" href="connect.html">CONTACT</a></li>
             <li><a class="nav-link" href="blog.html">BLOG</a></li>
             <!-- <li><a class="nav-link" href="#">BlOG</a></li> -->
             <li>
@@ -201,7 +201,7 @@
           </div>
         </a>
 
-        <!-- Project 4 -->
+        <!-- Project 4
         <a href="projects/ci-cd-automation.html" class="card">
           <div class="project-info">
             <div class="project-bio">
@@ -215,8 +215,8 @@
           </div>
         </a>
 
-        <!-- Project 5 -->
-        <a href="projects/cloud-migration-case.html" class="card">
+        Project 5 -->
+        <!-- <a href="projects/cloud-migration-case.html" class="card">
           <div class="project-info">
             <div class="project-bio">
               <h3>Enterprise Cloud Migration</h3>
@@ -227,10 +227,10 @@
               <span class="project-badge">Case Study</span>
             </div>
           </div>
-        </a>
+        </a> -->
 
         <!-- Project 6 -->
-        <a href="projects/devops-learning-platform.html" class="card">
+        <!-- <a href="projects/devops-learning-platform.html" class="card">
           <div class="project-info">
             <div class="project-bio">
               <h3>DevOps Learning Platform</h3>
@@ -241,7 +241,7 @@
               <i class="fas fa-globe"></i>
             </div>
           </div>
-        </a>
+        </a> -->
       </article>
 
       <a href="https://github.com/prashansajoshi?tab=repositories" class="btn btn-secondary" target="_blank">
