Update: the community profile

--- a/connect.html
+++ b/connect.html
@@ -214,7 +214,7 @@
           </div>
           <h3>AWS Community</h3>
           <p>AWS Community Builder profile, cloud resources, and AWS content</p>
-          <a href="https://builder.aws.com/profile" target="_blank" class="connect-btn">
+          <a href="https://builder.aws.com/community/@prashansa" target="_blank" class="connect-btn">
             AWS Community
           </a>
         </div>
