Update: the website

--- a/blog.html
+++ b/blog.html
@@ -91,13 +91,13 @@
             <li><a class="nav-link" href="index.html#footer">CONTACT</a></li>
             <li><a class="nav-link" href="blog.html">BLOG</a></li>
 
-            <li>
-              <a
-                class="nav-link btn btn-primary"
-                href="https://github.com/CommunityPro/portfolio-html"
-                >RESUME <i class="fas fa-arrow-right"></i
+            <!-- <li>
+             <a
+               class="nav-link btn btn-primary"
+               href="../assets/prashansajoshi_CV.pdf" target="_blank"
+               >RESUME <i class="fas fa-arrow-right"></i
               ></a>
-            </li>
+            </li> -->
 
             <!-- Toggle switch -->
             <div class="theme-switch">
@@ -253,7 +253,7 @@
           /></a>
         </div>
         <!-- Attribution -->
-        <div class="attribution">
+        <!-- <div class="attribution">
           <a
             href="https://github.com/CommunityPro/portfolio-html"
             target="_blank"
@@ -265,7 +265,7 @@
               width="150px"
             />
           </a>
-        </div>
+        </div> -->
         <p>Copyright &copy; Prashansa Joshi <span id="datee"></span>, All rights reserved</p>
       </div>
     </footer>
