--- a/connect.html
+++ b/connect.html
@@ -132,13 +132,14 @@
           <li><a class="nav-link" href="index.html#projects">PROJECTS</a></li>
           <li><a class="nav-link" href="index.html#footer">CONTACT</a></li>
           <li><a class="nav-link" href="blog.html">BLOG</a></li>
-          <li>
+          <!-- <li>
             <a
               class="nav-link btn btn-primary"
-              href="https://github.com/CommunityPro/portfolio-html"
+              href="assets/prashansajoshi_CV.pdf" target="_blank"
               >RESUME <i class="fas fa-arrow-right"></i
             ></a>
-          </li>
+          </li> -->
+          
           <div class="theme-switch">
             <input type="checkbox" id="switch" />
             <label class="toggle-icons" for="switch">
@@ -262,7 +263,7 @@
           </div>
           <h3>Resume</h3>
           <p>My professional experience, skills, and qualifications</p>
-          <a href="#" target="_blank" class="connect-btn">
+          <a href="assets/prashansajoshi_CV.pdf" target="_blank" class="connect-btn">
             View Resume
           </a>
         </div>
