--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
             <li><a class="nav-link" href="connect.html">CONTACT</a></li>
             <li><a class="nav-link" href="blog.html">BLOG</a></li>
             <!-- <li><a class="nav-link" href="#">BlOG</a></li> -->
-            <li>
+            <!-- <li>
               <a
                 class="nav-link btn btn-primary"
-                href="https://github.com/CommunityPro/portfolio-html"
+                href="assets/prashansajoshi_CV.pdf" target="_blank"
                 >RESUME <i class="fas fa-arrow-right"></i
               ></a>
-            </li>
+            </li> -->
 
             <!-- Toggle switch -->
             <div class="theme-switch">
