--- a/projects/agrowfarm-kubernetes.html
+++ b/projects/agrowfarm-kubernetes.html
@@ -328,7 +328,14 @@
           <li><a class="nav-link" href="../index.html#projects">PROJECTS</a></li>
           <li><a class="nav-link" href="../index.html#footer">CONTACT</a></li>
           <li><a class="nav-link" href="../blog.html">BLOG</a></li>
-          <li><a class="nav-link btn btn-primary" href="#">RESUME <i class="fas fa-arrow-right"></i></a></li>
+          <!-- <li>
+            <a
+              class="nav-link btn btn-primary"
+              href="../assets/prashansajoshi_CV.pdf" target="_blank"
+              >RESUME <i class="fas fa-arrow-right"></i
+            ></a>
+          </li> -->
+
           <div class="theme-switch">
             <input type="checkbox" id="switch" />
             <label class="toggle-icons" for="switch">
