--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
         <img
           class="profile-image"
           src="assets/profile-image.jpg"
-          alt=""
+          alt="prashansajoshi"
+          style="border-radius: 5% / 5%; width: 150px; height: 200px; object-fit: cover;"
         />
         <h1>Hi I'm Prashansa</h1>
 
